# aidlc-workshop

./: .env.example  .gitignore  AI-DLC.md  README.md  SETUP.md  main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
scripts/: generate_synthetic_data.py  verify_synthetic_data.py
src/: __init__.py  config.py  errors.py
src/api/: __init__.py  ads.py  analytics.py  campaigns.py  chatbot.py  customers.py  dependencies.py  llm_config.py  schemas.py  segments.py
src/engines/: __init__.py  kmeans_engine.py  llm_engine.py  pca_engine.py
src/models/: __init__.py  campaign.py  chatbot.py  customer.py  data_models.py  llm.py  ml.py  segment.py  service_models.py
src/repositories/: __init__.py  (+3 more)
synthetic_data/: README.md  main_dataset_report.txt  synthetic_customers.csv  synthetic_customers_edge_cases.csv  synthetic_customers_edge_cases.json  synthetic_customers_quality_issues.csv  synthetic_customers_quality_issues.json
tests/: __init__.py  test_ad_generator_service.py  test_analytics_properties.py  test_analytics_service.py  test_api.py  test_data_model_properties.py  test_data_models.py  test_e2e.py  test_errors.py  test_kmeans_engine.py  test_kmeans_properties.py  test_llm_adapters.py  test_llm_engine.py  test_llm_properties.py  test_pca_engine.py  test_pca_properties.py  test_query_chatbot_service.py  test_repositories.py  test_repository_properties.py  test_segmentation_service.py  test_service_properties.py  test_setup.py  test_synthetic_data.py  test_targeting_engine.py
workshop/: announcement.md
(+69 files in other folders)
