[project]
name = "llm-customer-segmentation-ads"
version = "0.1.0"
description = "ML-powered customer segmentation advertising system using PCA, K-Means, and LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "pytest>=8.0.0",
    "hypothesis>=6.98.0",
    "pydantic-settings>=2.13.1",
    "faker>=40.11.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hypothesis]
max_examples = 100
